@@ -15,4 +15,12 @@ libmercator_HEADERS = \
 	Matrix.h \
 	Terrain.h \
 	TerrainMod.h \
+	BasePoint.h \
 	Segment.h
+	
+bin_PROGRAMS = mercatortest
+
+mercatortest_SOURCES = \
+		 main.cpp
+
+mercatortest_LDFLAGS = -lmercator-0.2
